--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ body {font-family: 'Roboto', sans-serif;line-height: 1.14;font-size: 14px;}
 }
     
 .test-studio::after{content: '';position: absolute;background: #2196F3;display: inline-block;
-    border-radius: 2px;width: 100%;height: 4px;left: 0;top: 45px;
+    border-radius: 2px;width: 100%;height: 4px;left: 0;top: 0;
+    transform: translatey(46px);
         }
 
 .test-portfolio::after {
@@ -81,7 +82,8 @@ content: '';
     width: 100%;
     height: 4px;
     left: 0;
-    top: 45px;
+    top: 0;
+    transform: translatey(46px)
 }
 
 
@@ -346,9 +348,11 @@ transition:border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4
             display: flex;
             align-items: center;
             justify-content: center;
-            
+            transition: background 205ms cubic-bezier(0.4, 0, 0.2, 1);
         
         }
+
+                .social-list_icon{transition: fill 205ms cubic-bezier(0.4, 0, 0.2, 1);}
         .footer-social-list_item-link:hover,
         .footer-social-list_item-link:focus {background: var(--accent-color);}
         .footer-social-list_item-link:hover .social-list_icon,
