--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,8 @@ body {font-family: 'Roboto', sans-serif;line-height: 1.14;font-size: 14px;}
 }
     
 .test-studio::after{content: '';position: absolute;background: #2196F3;display: inline-block;
-    border-radius: 2px;width: 100%;height: 4px;left: 0;top: 0;
-    transform: translatey(46px);
+    border-radius: 2px;width: 100%;height: 4px;left: 0;bottom:-33px;
+    
         }
 
 .test-portfolio::after {
@@ -82,8 +82,8 @@ content: '';
     width: 100%;
     height: 4px;
     left: 0;
-    top: 0;
-    transform: translatey(46px)
+    bottom: -33px;
+    
 }
 
 
@@ -382,7 +382,7 @@ transition:border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4
     color: var(--h2-h3-color);
     cursor: pointer;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),background 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),background 250ms cubic-bezier(0.4, 0, 0.2, 1) ,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-portfolio-btn-link:hover,
@@ -441,6 +441,8 @@ transition:border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4
     transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+.projects-link{transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) ; }
+
 
 .projects-link:hover .team-list-overlay ,.projects-link:focus .team-list-overlay{
     transform:translateY(0%);
@@ -490,6 +492,8 @@ transition:border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4
     padding: 0;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    
+
 
     }
 
